[gd_scene load_steps=5 format=3 uid="uid://dqwe20ug6u4xg"]

[ext_resource type="Texture2D" uid="uid://c3vi5jehu8jh0" path="res://place holders/assets/enemy.png" id="1_psog7"]
[ext_resource type="Script" path="res://scenes/enemy/chaser.gd" id="1_rqau6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u2yym"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ppar3"]
radius = 128.141

[node name="chaser" type="CharacterBody2D" groups=["chaser"]]
collision_layer = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_rqau6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u2yym")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.272055, 0.000180202, 0.908293, 1)
scale = Vector2(0.240741, 0.322581)
texture = ExtResource("1_psog7")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect"]
shape = SubResource("CircleShape2D_ppar3")

[node name="wait" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="detect" to="." method="_on_detect_area_entered"]
[connection signal="body_entered" from="detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="detect" to="." method="_on_detect_body_exited"]
[connection signal="timeout" from="wait" to="." method="_on_wait_timeout"]
